--- a/app/src/main/res/layout/chat_list.xml
+++ b/app/src/main/res/layout/chat_list.xml
@@ -4,32 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/received"
+    <TextView
+        android:id="@+id/tvChatRecive"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="30dp"
-        app:cardBackgroundColor="@color/white">
-
-        <TextView
-            android:id="@+id/tvChatReceived"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="Received Messages"
-            android:textStyle="bold" />
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/sent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="10dp"
-        app:cardBackgroundColor="#25B7FA"
-        app:cardCornerRadius="30dp">
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="80dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/right_chat"
+        android:elevation="5dp"
+        android:padding="15dp"
+        android:text="Send Messages"
+        android:textColor="#000"
+        android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvChatSent"
@@ -38,9 +26,16 @@
             android:padding="15dp"
             android:text="Send Messages"
             android:textColor="@color/white"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/left_chat"
+            android:layout_alignParentEnd="true"
+             android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
+            android:elevation="5dp"
+            android:layout_marginLeft="80dp"
+            />
 
 
-    </androidx.cardview.widget.CardView>
+
 
 </RelativeLayout>
