--- a/app/src/main/res/layout/create_new_load.xml
+++ b/app/src/main/res/layout/create_new_load.xml
@@ -1,153 +1,336 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp"
-    android:gravity="center"
-    >
+    android:fillViewport="true">
 
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/boder_comfirm_load"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:elevation="10dp"
-        android:layout_margin="5dp">
+        android:background="@drawable/boder_dark"
+        android:padding="5dp">
 
-        <EditText
-            style="@style/comfirm_load_textView"
-            android:hint="Material Type"
-            android:id="@+id/materialtype"
-            android:textSize="16sp" />
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="40dp"
+                android:src="@drawable/arrow_down"
+                android:layout_marginTop="-8dp"
+                android:background="@color/white"
+                android:id="@+id/bottomclose"/>
+
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="10dp"
+            android:background="@drawable/boder_dark"
+            app:cardElevation="10dp"
+            app:cardCornerRadius="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_margin="10dp">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Material Type"
+                android:backgroundTint="#000000"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_margin="10dp">
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/materialtype"
+                    android:includeFontPadding="false"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="16sp"
+                    android:backgroundTint="#CDC8C8"
+                    android:layout_marginLeft="5dp"
+                    android:textCursorDrawable="@null"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             style="@style/comfirm_load_textView"
+            android:layout_marginTop="10dp"
             android:text="Pickup Address"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"
+            />
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/boder_comfirm_load"
-            android:elevation="5dp"
-            android:orientation="vertical"
-            android:padding="5dp" >
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Street"
-                android:textSize="14dp"
-                android:id="@+id/pk_street"/>
+            android:elevation="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
+            android:background="@drawable/boder_dark"
+           android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="3dp">
 
-            <EditText
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="city"
-                android:textSize="14dp"
-                android:id="@+id/pk_city"/>
+                android:padding="10dp">
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="State"
-                android:textSize="14dp"
-                android:id="@+id/pk_state"/>
-        </LinearLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/pk1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Street"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp">
+
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/pk_street"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="14dp"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="#CDC8C8"
+                        android:textCursorDrawable="@null"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/pk2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/pk1"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:hint="city">
+
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/pk_city"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/pk2"
+                        android:layout_marginLeft="5dp"
+                        android:textSize="16dp"
+                        android:textCursorDrawable="@null"
+                        android:backgroundTint="#CDC8C8"/>
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/pk2"
+                    android:id="@+id/pk_state"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    style="@style/Widget.AppCompat.Spinner.Underlined"
+                    />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
 
         <TextView
             style="@style/comfirm_load_textView"
+            android:layout_marginTop="10dp"
             android:text="Destintion Address"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold" />
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/boder_comfirm_load"
-            android:elevation="5dp"
-            android:orientation="vertical"
-            android:padding="10dp">
+            android:elevation="10dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/boder_dark"
+            android:layout_marginTop="3dp"
+            >
 
-
-            <EditText
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Street"
-                android:textSize="14dp"
-                android:id="@+id/dv_street"/>
+                android:padding="10dp">
 
-            <EditText
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/dv1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Street"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/dv_street"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="14dp"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="#CDC8C8"
+                        android:textCursorDrawable="@null"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/dv2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/dv1"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:hint="City">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/dv_city"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="14dp"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="#CDC8C8"
+                        android:textCursorDrawable="@null"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/dv_state"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_below="@id/dv2"
+                    style="@style/Widget.AppCompat.Spinner.Underlined" />
+
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:elevation="10dp"
+            android:background="@drawable/boder_dark"
+            app:cardElevation="10dp"
+            app:cardCornerRadius="10dp">
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="City"
-                android:textSize="14dp"
-                android:id="@+id/dv_city"/>
+                android:padding="10dp">
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="State"
-                android:textSize="14dp"
-                android:id="@+id/dv_state"/>
-        </LinearLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/we"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Weight"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Weight"
-            android:textSize="16dp"
-            android:layout_marginTop="10dp"
-            android:inputType="number"
-            android:id="@+id/weight"/>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/weight"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:inputType="number"
+                        android:textSize="16dp"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="#CDC8C8"
+                        android:textCursorDrawable="@null"/>
+                    />
+                </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Pickup contact"
-            android:textSize="16dp"
-            android:maxLength="10"
-            android:id="@+id/pickup_contacte"
-            android:inputType="number"/>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/cn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/we"
+                    android:hint="Pickup contact"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp">
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Delivery Contact"
-            android:textSize="16dp"
-            android:maxLength="10"
-            android:inputType="number"
-            android:id="@+id/dv_contacte"/>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/pickup_contacte"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/weight"
+                        android:inputType="number"
+                        android:maxLength="10"
+                        android:textSize="16dp"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="#CDC8C8"
+                        android:textCursorDrawable="@null"/>
+                    />
+                </com.google.android.material.textfield.TextInputLayout>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Last Date"
-            android:textSize="14dp"
-            android:inputType="date"
-            android:id="@+id/et_lastdate"/>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/dvc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/cn"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:hint="Delivery Contact">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/dv_contacte"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/pickup_contacte"
+                        android:inputType="number"
+                        android:maxLength="10"
+                        android:layout_marginLeft="5dp"
+                        android:textSize="16dp"
+                        android:textCursorDrawable="@null"
+                        android:backgroundTint="#CDC8C8"/>
+                    />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/dvc"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:hint="Last Date">
+
+
+                    <EditText
+                        android:id="@+id/et_lastdate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/dv_contacte"
+                        android:inputType="date"
+                        android:focusable="false"
+                        android:textSize="14dp"
+                        android:layout_marginLeft="5dp"
+                        android:backgroundTint="#CDC8C8"
+                        android:textCursorDrawable="@null"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
 
         <Button
+            android:id="@+id/btn_create_load"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:text="Create Load"
-            android:background="@drawable/button_blue"
-            android:textStyle="bold"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:layout_width="150dp"
-            android:textColor="@color/white"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
+            android:background="@drawable/button_blue"
             android:elevation="10dp"
-            android:id="@+id/btn_create_load"/>
+            android:text="Create Load"
+            android:textColor="@color/white"
+            android:textStyle="bold" />
     </LinearLayout>
-    </LinearLayout>
+
 </ScrollView>
