--- a/app/src/main/res/layout/material_status.xml
+++ b/app/src/main/res/layout/material_status.xml
@@ -3,10 +3,14 @@
     android:layout_width="380dp"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:background="@drawable/boder_comfirm_load"
     android:orientation="vertical"
+    android:background="@drawable/boder_comfirm_load"
     android:padding="10dp">
-
+<androidx.cardview.widget.CardView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    card_view:cardElevation="15dp"
+    android:elevation="10dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -33,13 +37,18 @@
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
-            <ImageView
+            <TextView
                 android:id="@+id/ivCancel"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="-5dp"
-                android:src="@drawable/cross" />
+                android:text="X"
+                android:textSize="30sp"
+                android:background="#eb150A"
+                android:textColor="@color/white"
+                android:gravity="center"
+           />
         </RelativeLayout>
 
         <LinearLayout
@@ -76,36 +85,36 @@
                         android:visibility="gone" />
                 </RelativeLayout>
 
-                <RelativeLayout
-                    android:id="@+id/rl3"
-                    android:layout_width="match_parent"
+            <RelativeLayout
+                android:id="@+id/rl3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp">
+
+                <TextView
+                    android:id="@+id/tvTransit"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp">
+                    android:text="In Transit"
+                    android:textSize="18sp" />
 
-                    <TextView
-                        android:id="@+id/tvTransit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="In Transit"
-                        android:textSize="18sp" />
+                <ImageView
+                    android:id="@+id/cTransit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/blank_check_box" />
 
-                    <ImageView
-                        android:id="@+id/cTransit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:src="@drawable/blank_check_box" />
+                <ImageView
+                    android:id="@+id/checkedTransit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/cheked_box"
+                    android:visibility="gone" />
+            </RelativeLayout>
 
-                    <ImageView
-                        android:id="@+id/checkedTransit"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:src="@drawable/cheked_box"
-                        android:visibility="gone" />
-                </RelativeLayout>
-
-                <RelativeLayout
+            <RelativeLayout
                     android:id="@+id/rl4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -164,4 +173,5 @@
                 </RelativeLayout>
         </LinearLayout>
     </RelativeLayout>
+</androidx.cardview.widget.CardView>
 </LinearLayout>
